<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laptop.finalproject.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?android:attr/actionBarSize"
        android:id="@+id/toolbarMain"
        android:background="@color/colorPrimaryDark"
        app:titleMarginStart="20dp"
        app:titleTextColor="@color/colorBackground"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:id="@+id/etPostcode"
            android:padding="6dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/colorWhite"/>

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svMainScrollView"
        android:layout_below="@id/toolbarMain"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonBg"
                android:id="@+id/rlFindNearby">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:id="@+id/btnFindNearby"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textColor="@color/colorWhite"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    />
                </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlCuisine"
                android:layout_below="@id/rlFindNearby">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/ivCuisine"
                    android:layout_marginTop="1dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/cardview_shadow_start_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/tvCuisine"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"/>

                </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlCategory"
                android:layout_below="@id/rlCuisine">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/ivCategory"
                    android:layout_marginTop="1dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/cardview_shadow_start_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/tvCategory"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlPrice"
                android:layout_below="@id/rlCategory">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="1dp"
                    android:id="@+id/ivPrice"
                    android:layout_centerHorizontal="true"
                    android:background="@color/cardview_shadow_start_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/tvPrice"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlRating"
                android:layout_below="@id/rlPrice">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="1dp"
                    android:id="@+id/ivRating"
                    android:layout_centerHorizontal="true"
                    android:background="@color/cardview_shadow_start_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/tvRating"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
