<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/btnEN"
        android:title="@string/english"
        app:showAsAction="withText|never"/>

    <item android:id="@+id/btnBG"
        android:title="@string/bulgarian"
        app:showAsAction="withText|never"/>

    <item android:id="@+id/btnLocation"
        android:title="Use My Location"
        android:icon="@mipmap/crosshair"
        app:showAsAction="always"/>

</menu>