<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?android:attr/actionBarSize"
        android:id="@+id/toolbarMaps"
        android:background="@color/colorPrimaryDark"
        map:titleMarginStart="20dp"
        android:elevation="4dp"
        map:titleTextColor="@color/colorBackground"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarMaps"
        android:id="@+id/fragment_container">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.laptop.finalproject.MapsActivity" />

    </RelativeLayout>



</RelativeLayout>
