<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity">

    <item android:id="@+id/btnRestaurantList"
        android:title="@string/toggle_list_view"
        android:orderInCategory="101"
        android:icon="@mipmap/ic_list"
        app:showAsAction="always"/>

</menu>