<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laptop.finalproject.fragments.Tab3">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srDailyMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/wvMenu" />



        <!--android.support.v7.widget.RecyclerView
            android:id="@+id/rvDailyMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" /-->

    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
